Força atualização do requirements.txt com comentário

--- a/requirements.txt
+++ b/requirements.txt
@@ -29,3 +29,5 @@ python-dotenv    # Para gerenciar nossa chave da API da OpenAI de forma segura
 fastapi
 uvicorn[standard]
 python-multipart # Necessário para FastAPI com UploadFile + Form
+
+# Atualização forçada - [24.10.2025 17:31]
