--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,8 @@ langchain-core>=0.1.52,<0.3.0
 langchain-community>=0.0.38,<0.3.0 
 langchain>=0.1.20,<0.3.0
 langchain-openai>=0.1.7,<0.2.0 
-# Adicione outras dependências do langchain se precisar delas explicitamente
+langgraph # ou langgraph<0.1.0 
+faiss-cpu # <-- ADICIONE ESTA LINHA para o Vector Store FAISS
 
 # Interface Web
 streamlit
